# auth0_flutter_linux

./: .gitignore  .metadata  README.md  pubspec.yaml
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
lib/: auth0_flutter_linux.dart  auth0_flutter_linux_method_channel.dart  auth0_flutter_linux_platform_interface.dart
lib/src/: web_authentication.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: ffi.dart
linux/: CMakeLists.txt  Cargo.toml  auth0_flutter_linux_plugin.cc  auth0_flutter_linux_plugin_private.h  build.rs  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/api/: ffi.dart
linux/flutter/ephemeral/: generated_config.cmake
linux/include/auth0_flutter_linux/: auth0_flutter_linux_plugin.h
linux/src/: frb_generated.rs
linux/src/api/: ffi.rs  mod.rs
linux/static/: index.html  main.js
linux/test/: auth0_flutter_linux_plugin_test.cc
test/: auth0_flutter_linux_method_channel_test.dart  auth0_flutter_linux_test.dart
