[package]
name = "auth0_flutter_linux"
version = "0.1.0"
edition = "2021"
description = "Linux plugin for the Auth0 Flutter SDK."

[lib]
name = "auth0_flutter_plugin"
crate-type = ["cdylib"]

[dependencies]
flutter_rust_bridge = "=2.8.0"
serde = {version = "1.0.218", features = ["derive"]}

[build-dependencies]
flutter_rust_bridge_codegen = "2.8.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
